SSDM-12359: replace constructors for Integer, Long, Float and Double by factory method valueOf because the constructors are depcreated